@@ -1,13 +1,13 @@
-FROM maven:3.6.1-jdk-11-slim as maven
+FROM maven:3.9.7-amazoncorretto-21 as maven
 WORKDIR /solon
 COPY pom.xml pom.xml
 COPY src src
 RUN mvn compile assembly:single -q
 
-FROM openjdk:11.0.3-jdk-slim
+FROM openjdk:21-jdk-slim
 WORKDIR /solon
-COPY --from=maven /solon/target/solon-benchmark-jar-with-dependencies.jar app.jar
+COPY --from=maven /solon/target/hello-solon.jar app.jar
 
 EXPOSE 8080
 
-CMD ["java", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", "-cp", "app.jar", "pmg.Main"]
+CMD ["java", "-server", "-cp", "app.jar", "hello.Main"]
